homeStyleSheet.css
.gameContainer {
  display: grid;
  grid-template-columns: repeat(2, minmax(300px, 1fr));
  gap: 20px;
  width: 80%;
  max-width: 1100px;
  padding-bottom: 100px;
}

.gameCard {
  background-color: #96B1C5;
  border-radius: 15px;
  padding: 30px;
  text-decoration: none;
  color: inherit;
  transition: transform 0.3s ease,
              background-color 0.3s ease,
              border-radius 0.3s ease,
              box-shadow 0.3s ease;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

.gameCard:hover {
  border-radius: 25px;
  transform: scale(1.05);
  background-color: #7B9DB7;
  box-shadow: 4px 4px 15px;
}

.gameIcon{transition: transform 0.3s ease;}
.gameIcon img{width: 25%;}
.gameCard:hover .gameIcon{transform: scale(1.75);}

.gameInfo h2 {
  font-size: 24px;
  margin-bottom: 10px;
  font-weight: 700;
}
.gameInfo p {
  font-size: 14px;
  margin: 0;
  opacity: 60%;
}
.gameCard:hover .gameInfo{display: none;}

@media (max-width: 700px) {
  .gameContainer {
    grid-template-columns: 1fr;
    max-width: 500px;
  }
}

